[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/player/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="SpatialMaterial" id=2]
flags_world_triplanar = true
albedo_color = Color( 0.160784, 1, 0.231373, 1 )
roughness = 0.0
uv1_triplanar = true

[sub_resource type="CapsuleShape" id=3]
radius = 0.5

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Pivot" type="Spatial" parent="."]

[node name="Pivot2" type="Spatial" parent="Pivot"]

[node name="SpringArm" type="SpringArm" parent="Pivot/Pivot2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
spring_length = 5.0

[node name="Camera" type="Camera" parent="Pivot/Pivot2/SpringArm"]
far = 1000.0

[node name="RotationPivot" type="Spatial" parent="."]

[node name="RotationHelper" type="Spatial" parent="."]

[node name="FloorCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
enabled = true
cast_to = Vector3( 0, -0.1, 0 )

[node name="CoyoteClock" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallRunner" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="WallRunner" to="." method="_on_WallRunner_timeout"]
